coffee-compass/src/index.css
/* ... */
.chart-container label{
  color: antiquewhite;
  margin-bottom: 10px;
}

.chart-container input{
  margin-bottom: 15px;

}



.cafe-info{
  position: absolute;
  right: 5px;
  width: 50%;
  left: auto;
  bottom: 0px;
  top: 60px;
  overflow: auto;
}

.cafe-info::-webkit-scrollbar {
  width: 5px;
}
 
.cafe-info::-webkit-scrollbar-track {
  box-shadow: inset 0 0 0px rgba(0, 0, 0, 0.3);
}
 
.cafe-info::-webkit-scrollbar-thumb {
  background-color: darkgrey;
  outline: 1px solid slategrey;
  border-radius: 5px;

}

#right::-webkit-scrollbar {
  width: 5px;
}
 
#right::-webkit-scrollbar-track {
  box-shadow: inset 0 0 0px rgba(0, 0, 0, 0.3);
}
 
#right::-webkit-scrollbar-thumb {
  background-color: darkgrey;
  outline: 1px solid slategrey;
  border-radius: 5px;
}




#zone-cafe-title{
  width: 150px;
  height: 50px;
  border-radius: 50px;
  color: antiquewhite;
  font-size: 30px;
  margin: 0px;
}

#av-cafe-rating{
  height: 50px;
  border-radius: 50px;
  position: absolute;
  right: 0px; 
  left: 150px;
  width: auto;
  top: 0px;
  height: 50px;
  border-radius: 50px;
  color: antiquewhite;
  font-size: 30px;
  margin: 0px;
  text-align: right;
}

.zone-cafe{
  width: 100%;
  height: 100px;
  display: flex;
  align-items:start;
  justify-content: left;
  
  border-top: 2px solid antiquewhite;
}

.zone-cafe img{
  width: 50%;
  position: relative;
  height: 90px;
  left: 0px;
  top: 5px;
  bottom: 5px;
  object-fit: cover;

}

.zone-cafe p{
  position: absolute;
  left: 52%;
  text-align: left;  
  color: antiquewhite;
  font-size: 22px;
  margin: 0px;
  margin-top: 5px;
}


.zone-info{
  position: absolute;
  top: 60px;
  left: 5px;
  right: 5px;
  bottom: 5px;

}

.sidebar-toggle.right{

  display: flex;
  align-items: center;
  justify-content: center;
 }

.zone-info *{
  margin: 0px;
  padding: 0px;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  color: antiquewhite;

}
.zone-info div{
  width: 31% ;
  min-width: 240px;
  height: 226px;
  margin: 10px;
  margin-top: 0px;
  border-top: 3px solid antiquewhite;

  border-bottom: 3px solid antiquewhite;
  float: left;
}

.zone-info div h2{
font-size: 23px;
position: static;
margin-top: 5px;
}
.zone-info div p{
font-size: 18px;
margin: 0px;
padding: 0px;
height: 20px;
width: 90%;
}

@media only screen and (max-width: 926px) {
  .zone-info div{
  width: 45%;
  }
}

@media only screen and (max-width: 627px) {
  .zone-info div{
    width: 95%;
    }
}


.heatmap-analytics{
  display: flex;
  align-items: center;
  justify-content: center
}
.legend{
  position: absolute;
  right: auto;
  top: 80px;
  width: 197.5px;
  height: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  left: auto;
color: antiquewhite;
pointer-events: auto;
padding: 0px;
}

.legend svg{
  margin-top: 10px;
}

.legend h4{
  position: absolute;
  bottom: 5px;

}



/*
total responsiveness
x -reload button
x -fixed slider length, padding on slider text
link to essentials
hover and click animations on takeout
fix takeout button stylign
X -  remove taxi button
x - style legend
style map buttons
drawer responsiveness
drawer rating func
cafe drawer resp, maybe fix the image upto min width and have reviews scroll
  replace cafe drawer with stars. 
x - check map clickable
check firefox, edge, chrome and safari
drawer in and out animation and lip
mobile layout flip?
bike map pngs big and obscure
*/



.cafe-name {
  cursor: pointer;
}

.cafe-name:hover {
  color: #B6B8B9;
  text-decoration: underline;
}

.mode-selection {
  background-color: #1f1f1f;
  color: #F2F4F3;
  border-radius: 3px;
  /* bottom: 30px; */
  left: 50px;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
  font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
  padding: 10px;
  z-index: 1;
}


@media only screen and (max-width: 575px) {
  .BusynessSliderBox{
    left: 75px;
    width: auto;
  }
  }

  @media only screen and (max-width: 675px) {

    .chart-container{
      width: 90%;
      top: 40px;
      height: 240px;
    }

    .cafe-info{
      top: 270px;
      width: 90%;
      left: 15px;
      right: 15px;
      height: 260px;
    }

    .sidebar-content{
      overflow: auto;
    }
  }

  @media only screen and (max-width: 615px) {
    .legend{
      top: 140px;
    }

  }

  @media only screen and (max-width: 435px) {
    .BusynessSliderBox{
      background-color: #555555;
      top: 0px;
      height: 125px;
      left: 0px;
      right: 0px;
      width: auto;
      z-index: 20;
    }

    .HeatMapBox{
      left: 0px;
      right: 0px;
      width: auto;
    }
    .buttonSuggestion{
      top: 60px;
      left: 0px;
      right: 0px;
      width: auto;
    }

    .takeOutButton, .takeout-box-container{
      top: 190px;
      right: 0px;
      left: 0px;
      width: auto;
    }

    .legend{
      top: 245px;
      
    }

   

    .HeatMapBox div{
      position: absolute;
    }

    }
      

.welcome {
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 100;
  color: white;
  background: rgba(0, 0, 0, 0.5);
  z-index: 10000;
}

.Welcome-Text {
  margin-right: 20px;
  color: antiquewhite;
  width: 30vw;
  height: 20vh;
  font-size: 18px; /* or adjust to match your site's text size */
  align-self: center; /* aligns the text vertically centered in the flex container */
  justify-self: start; /* aligns the text at the start of its grid area */
}
/* ... */

